--- a/website_example/pages/getting_started.html
+++ b/website_example/pages/getting_started.html
@@ -318,20 +318,23 @@ currentPage = {
             xmrstakAlgo = 'cryptonight_heavy';
         }
         else {
-            if (cnVariant === 1) {
-                algorithm = 'Cryptonight (Monero v7)';
-                xmrstakAlgo = 'cryptonight_v7';
-            } else if (cnVariant === 3) {
-                algorithm = 'Cryptonight (Stellite v7)';
-                xmrstakAlgo = 'cryptonight_v7_stellite';
-	    } else if (cnVariant === 4) {
-                algorithm = 'Cryptonight Fast (Masari)';
-                xmrstakAlgo = 'cryptonight_masari';
-            } else {
-                algorithm = 'Cryptonight (Original)';
-                xmrstakAlgo = 'cryptonight';
-            }
+        if (cnVariant === 1) {
+            algorithm = 'Cryptonight (Monero v7)';
+            xmrstakAlgo = 'cryptonight_v7';
+        } else if (cnVariant === 3) {
+            algorithm = 'Cryptonight (Stellite v7)';
+            xmrstakAlgo = 'cryptonight_v7_stellite';
+    } else if (cnVariant === 4) {
+            algorithm = 'Cryptonight Fast (Masari)';
+            xmrstakAlgo = 'cryptonight_masari';
+	} else if (cnVariant === 8) {
+            algorithm = 'Cryptonight Variant 2 (Cryptonight v8)';
+            xmrstakAlgo = 'cryptonight_v8';
+        } else {
+            algorithm = 'Cryptonight (Original)';
+            xmrstakAlgo = 'cryptonight';
         }
+    }
 
         /*
         if (coin == 'aeon') xmrstakAlgo = 'aeon7';
